# labs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run_and_capture.cmake  run_test_4.bat  test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp
common/: CMakeLists.txt
common/include/common/: heat.hpp  integration.hpp  matrix.hpp
common/src/: heat.cpp  integration.cpp
labs/lab_01_integration/: CMakeLists.txt  main.cpp
labs/lab_02_heat_equation/: CMakeLists.txt  main.cpp
labs/lab_03_matrix_multiplication/: CMakeLists.txt  main.cpp
