# Строка 2: "Создай программу (add_executable) с именем 'lab_01'".
# "Для ее создания используй кирпичи из файла main.cpp".
add_executable(lab_01 main.cpp)

# Строка 6: "Самое главное! Чтобы построить 'lab_01', тебе понадобится
# готовый блок 'common'. Присоедини (прилинкуй) его к 'lab_01'".
# PRIVATE означает, что эта зависимость нужна только для 'lab_01' и не передается дальше.
target_link_libraries(lab_01 PRIVATE common)